<resources>
    <string name="app_name">BaseweightSnap</string>

    <!-- Model Manager -->
    <string name="manage_models">Manage Models</string>
    <string name="add_model">Add Model</string>
    <string name="no_models">No Models</string>
    <string name="no_models_downloaded">No models downloaded</string>
    <string name="tap_add_to_download">Tap + to download a model from HuggingFace</string>
    <string name="default_model_indicator">Default model indicator</string>
    <string name="more_options">More options</string>
    <string name="set_as_default">Set as Default</string>
    <string name="delete_model">Delete Model</string>
    <string name="delete_confirmation">Are you sure you want to delete this model?</string>
    <string name="model_deleted">Model deleted</string>
    <string name="model_set_as_default">Model set as default</string>

    <!-- Add Model Dialog -->
    <string name="add_model_from_huggingface">Add Model from HuggingFace</string>
    <string name="enter_hf_repository">Enter the HuggingFace repository in the format: orgName/repository</string>
    <string name="repository_format">orgName/repository</string>
    <string name="example_repo">Example: HuggingFaceTB/SmolVLM-Instruct</string>
    <string name="examples">Examples:</string>
    <string name="download">Download</string>
    <string name="invalid_repository_format">Invalid repository format. Use: orgName/repository</string>
    <string name="downloading_model">Downloading model…</string>
    <string name="validating_repository">Validating repository…</string>
</resources>